--- a/Thinktecture.Applications.Framework/Thinktecture.Applications.Framework.csproj
+++ b/Thinktecture.Applications.Framework/Thinktecture.Applications.Framework.csproj
@@ -98,11 +98,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsyncQueryableAttribute.cs" />
+    <Compile Include="WebApi\AsyncQueryableAttribute.cs" />
     <Compile Include="Entities\DbContextHelper.cs" />
     <Compile Include="Entities\DataState.cs" />
+    <Compile Include="WebApi\InlineCountQueryableAttribute.cs" />
     <Compile Include="Repository\GenericRepository.cs" />
-    <Compile Include="HubApiController.cs" />
+    <Compile Include="WebApi\HubApiController.cs" />
     <Compile Include="Repository\IGenericRepository.cs" />
     <Compile Include="Entities\IDataWithState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
