--- a/TodoWebApp/Todo.WebApp.csproj
+++ b/TodoWebApp/Todo.WebApp.csproj
@@ -294,6 +294,8 @@
     <Content Include="Content\themes\base\minified\images\ui-icons_454545_256x240.png" />
     <Content Include="Content\themes\base\minified\images\ui-icons_888888_256x240.png" />
     <Content Include="Content\themes\base\minified\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="jqm\js\app.js" />
+    <Content Include="jqm\js\sharedServices.js" />
     <Content Include="Scripts\i18n\angular-locale_af-na.js" />
     <Content Include="Scripts\i18n\angular-locale_af-za.js" />
     <Content Include="Scripts\i18n\angular-locale_af.js" />
@@ -486,7 +488,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tooltip.min.css" />
     <Content Include="jqm\js\controllers.js" />
     <Content Include="jqm\views\index.html" />
-    <Content Include="jqm\js\services.js" />
+    <Content Include="jqm\js\todoService.js" />
     <Content Include="images\accent.png" />
     <Content Include="images\bullet.png" />
     <Content Include="images\heroAccent.png" />
