--- a/Thinktecture.Applications.Framework/Thinktecture.Applications.Framework.csproj
+++ b/Thinktecture.Applications.Framework/Thinktecture.Applications.Framework.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Entities\IDataWithState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\StateMapper.cs" />
+    <Compile Include="WebApi\JsonContentNegotiator.cs" />
     <Compile Include="WebApi\RequireSslAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
